--- a/index.html
+++ b/index.html
@@ -37,7 +37,23 @@
 
   <h1> 4) ¿Qué gráfico es el más adecuado? </h1>
 
-  Segun mi opinion la grafica que mejor se ajusta a los datos es el grafico de barras 
+  Al analizar los datos proporcionados, que incluyen información sobre las emisiones totales de CO2, las emisiones de CO2 Kg/1000$ y las emisiones de CO2 per cápita para diferentes países, es importante seleccionar un tipo de gráfico que represente de manera efectiva y clara las comparaciones entre los países en cada una de estas métricas. A continuación, se evalúan las cuatro opciones de gráficos sugeridas:
+
+  Opción 1: Gráfico circular
+  Un gráfico circular podría ser útil para representar la proporción de emisiones totales de CO2 de cada país en relación con el total, pero no permite comparaciones claras entre países en términos de las otras dos métricas (CO2 Kg/1000$ y CO2 t per cápita).
+
+  Opción 2: Gráfico de columnas
+  Un gráfico de columnas es una opción sólida para representar estos datos, ya que permite comparaciones visuales directas entre los países en cada una de las métricas. Sin embargo, es posible que sea necesario crear varios gráficos de columnas para representar cada métrica de manera efectiva.
+
+  Opción 3:  Gráfico de columnas ordenadas de menor a mayor
+  Un gráfico de columnas ordenadas de menor a mayor podría ser útil para enfatizar las diferencias entre los países en cada métrica, especialmente si hay una brecha significativa entre los países con las emisiones más altas y más bajas. Sin embargo, como en el caso del gráfico de columnas, es posible que sea necesario crear varios gráficos de columnas ordenadas para representar cada métrica de manera efectiva.
+
+
+  Opción 4:   Gráfico de columnas horizontales
+  Similar al gráfico de columnas, un gráfico de columnas horizontales también permite comparaciones visuales entre países en cada métrica. La elección entre un gráfico de columnas verticales y uno horizontal puede depender de preferencias personales o limitaciones de espacio en la presentación.
+
+
+  En conclusión, un gráfico de columnas (opción 2) o un gráfico de columnas horizontales (opción 3) serían las opciones más adecuadas para representar estos datos, ya que permiten comparaciones claras entre los países en todas las métricas. La elección entre estas dos opciones dependerá de las preferencias personales y las limitaciones de espacio en la presentación. El gráfico de columnas ordenadas de menor a mayor (opción 4) también podría ser una opción válida si se desea enfatizar las diferencias entre los países con las emisiones más altas y más bajas.
 
   <h1> 4 + Ampliación de la Práctica (+0.5) </h1>
   <iframe width="651" height="410" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQjgV2UM6ggOGg8Y2SYpA-xFk5HB3ZoUGgieEbVdWRBn8S8KyjR3rpm6cVVOtW7AlRImUWFg37igx6H/pubchart?oid=1935136171&amp;format=interactive"></iframe>
